        term/x11.trm:  Remove global default font from term.c and make all
        drivers keep their own default font so they don't cross-contaminate.

        * src/graphics.c src/save.c src/set.c src/show.c docs/gnuplot.doc
        demo/fillbox.dem demo/candlesticks.dem demo/candlesticks.dat:
        Add new filledbox style options 'bsolid' and 'bpattern'.

2002-08-30  Volker Dobler  <v.dobler@web.de>

	* NEWS demo/all.dem demo/pm3dcolors.dem demo/pm3dgamma.dem
	docs/gnuplot.doc src/Makefile.am src/color.c src/color.h src/getcolor.c
	src/getcolor.h src/gplt_x11.c src/plot.c src/save.c src/set.c
	src/show.c src/tables.c src/tables.h src/win/wgraph.c term/metapost.trm
	term/pdf.trm term/post.trm term/svg.trm term/x11.trm: New color modes
	for pm3d, see `help palette`: `defined`, `file`, `functions`, `model`,
	`gamma`. Additions to `show palette ...`. New option `set terminal
	postscript ... palfuncparam`.

2002-08-28  Ethan Merritt <merritt@u.washington.edu>

	* docs/gnuplot.doc term/hpgl.trm term/epslatex.trm:
	Spell-check and fix typos in documentation.

2002-08-28  Ethan Merritt <merritt@u.washington.edu>

	* term/gd.trm: Fix error in terminal initialization.

2002-08-27  Ethan Merritt <merritt@u.washington.edu>

	* term/gif.trm term/png.trm: Update TERM_HELP sections
	so that auto-generation of documentation is consistent. 
	
	* term/gd.trm: Add terminal options nointerlace, notransparent, 
	and retain terminal options across calls to set term. Move
	default font properties into the per-terminal data structure.

2002-08-27  Ethan Merritt <merritt@u.washington.edu>

	* term/jpeg.trm: Add placeholder file so that auto-generation of
	documentation includes a section on jpeg.

2002-08-27  Volker Dobler <v.dobler@web.de>

	* src/color.c: Use signed int for cblabel positioning.

2002-08-25  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c term/x11.trm: Add support for selecting x11 fonts.
	The syntax is `set term x11 font "<fontspec>"` where <fontspec> is